Fixed input field spacing for login page

--- a/src/main/webapp/assets/style/app.css
+++ b/src/main/webapp/assets/style/app.css
@@ -25,8 +25,12 @@
 .floating-label input:focus + label, .floating-label input:not(:placeholder-shown) + label {
     top:0;
     color:#212529;
-    padding:0;
+    padding:4px;
     font-size:14px;
+}
+
+form .form-group:not(:last-of-type) {
+    margin-bottom: 0;
 }
 
 
